--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,19 @@
 .App {
-  //   border: 1px solid black;
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: center;
-  //   align-items: center;
   background-color: lightgray;
+  padding: 0 2rem 2rem 2rem;
 
   &_header {
     margin-top: 0;
+    margin-bottom: 0.5rem;
+    padding-top: 1rem;
+  }
+
+  &_para {
+    color: darkslategray;
   }
 
   &_card {
-    width: 90%;
     margin: 0 auto;
-    // padding: 1rem;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
@@ -24,23 +24,20 @@
   }
 
   &_container {
-    padding: 0 1rem;
+    padding: 0 1rem 1rem 1rem;
   }
 
   &_img,
   &_vid {
+    object-fit: cover;
     display: block;
-    height: 20rem;
+    height: 70vh;
     width: 100%;
   }
 
   &_explanation {
     font-weight: 200;
-    line-height: 20px;
+    line-height: 24px;
     line-break: auto;
-  }
-
-  &_para {
-    color: darkslategray;
   }
 }
