--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -1,10 +1,3 @@
-// .load_container {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-self: center;
-// }
-
 .loader {
   border: 10px solid #f3f3f3;
   border-top: 10px solid #3498db;
@@ -13,10 +6,10 @@
   height: 80px;
   animation: spin 1s linear infinite;
   margin: 0 auto;
+  margin-top: 5rem;
 }
 
 .load_text {
-  //   margin: 0 auto;
   text-align: center;
 }
 
